--- a/window.ui
+++ b/window.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1000</width>
+    <width>1300</width>
     <height>700</height>
    </size>
   </property>
@@ -71,6 +71,9 @@
                  </item>
                  <item>
                   <widget class="QSpinBox" name="nranking">
+                   <property name="minimum">
+                    <number>5</number>
+                   </property>
                    <property name="value">
                     <number>5</number>
                    </property>
@@ -128,11 +131,11 @@
                </item>
                <item>
                 <widget class="QTextEdit" name="filtros">
+                 <property name="markdown">
+                  <string/>
+                 </property>
                  <property name="placeholderText">
                   <string>Escriba la consulta que desee realizar.</string>
-                 </property>
-                 <property name="markdown" stdset="0">
-                  <string/>
                  </property>
                 </widget>
                </item>
