--- a/window.ui
+++ b/window.ui
@@ -531,7 +531,7 @@
           <item>
            <widget class="QGroupBox" name="groupBox_4">
             <property name="title">
-             <string>Opciones de prediccion:</string>
+             <string>Opciones de recomendación:</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="0" column="0">
@@ -541,7 +541,7 @@
                  <item>
                   <widget class="QLabel" name="label_15">
                    <property name="text">
-                    <string>Numero de predicciones:</string>
+                    <string>Numero de recomendaciones:</string>
                    </property>
                   </widget>
                  </item>
